# Crop-Classification

./: .gitignore  pyproject.toml  replica_beca.ipynb
