[project]
name = "crop-classification"
version = "0.1.0"
description = "Fork para beca IA UNNE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.7.1",
    "geedim>=1.9.1",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
